# construct-server

./: .dockerignore  .env.backup  .env.example  .env.local.example  .env.test.example  .gitignore  AGENTS.md  Cargo.toml  DOCUMENTATION.md  Dockerfile  MLS_CHANNELS_ROADMAP.md  Makefile  Makefile.staging  PUSH_NOTIFICATION_AUDIT.md  README.md  SENTINEL_AUDIT.md  build.rs  crypto.rs  docker-compose.yml  envoy.fly.yaml  fly.gateway.toml  fly.toml  fly.worker.toml  key.py  protols.toml  redpanda.yaml  server-requirements.md  setup-fly-secrets.sh  supervisord.conf  test_client.py  test_crypto_client.py
auth-service/: Cargo.toml
auth-service/src/: handlers.rs  main.rs  recovery.rs
channel-service/: Cargo.toml
channel-service/src/: helpers.rs  main.rs  metrics.rs  service.rs
channel-service/src/handlers/: mod.rs
crates/construct-apns/: Cargo.toml
crates/construct-apns/src/: client.rs  encryption.rs  lib.rs  types.rs
crates/construct-auth/: Cargo.toml
crates/construct-auth-service/: Cargo.toml
crates/construct-auth-service/src/: context.rs  core.rs  devices.rs  lib.rs
crates/construct-auth/src/: auth_tests.rs  lib.rs
crates/construct-broker/: Cargo.toml
crates/construct-broker/src/: config.rs  consumer.rs  lib.rs  metrics.rs  producer.rs  types.rs
crates/construct-config/: Cargo.toml
crates/construct-config/src/: constants.rs  database.rs  federation.rs  kafka.rs  lib.rs  messaging.rs  microservices.rs  redis.rs  security.rs
crates/construct-context/: Cargo.toml
crates/construct-context/src/: lib.rs  traits.rs
crates/construct-crypto/: Cargo.toml
crates/construct-crypto/src/: delivery_ack.rs  e2e.rs  envelope.rs  hmac_hash.rs  key_sizes.rs  lib.rs  username.rs
crates/construct-db/: Cargo.toml
crates/construct-db/src/: lib.rs  mls.rs
crates/construct-delivery-ack/: Cargo.toml
crates/construct-delivery-ack/src/: batching.rs  cleanup.rs  lib.rs  models.rs  security_tests.rs  storage.rs
crates/construct-error/: Cargo.toml
crates/construct-error/src/: lib.rs
crates/construct-extractors/: Cargo.toml
crates/construct-extractors/src/: device_auth.rs  lib.rs  trusted_user.rs
crates/construct-federation/: Cargo.toml
crates/construct-federation/src/: client.rs
crates/construct-key-management/: Cargo.toml
crates/construct-key-management/src/: audit.rs  keys.rs  lib.rs  rotation.rs  vault.rs
crates/construct-messaging-service/: Cargo.toml
crates/construct-messaging-service/src/: lib.rs
crates/construct-metrics/: Cargo.toml
crates/construct-metrics/src/: lib.rs
crates/construct-pending/: Cargo.toml
crates/construct-pending/src/: storage.rs
delivery-worker/: Cargo.toml
delivery-worker/src/: deduplication.rs  dlq.rs  main.rs  processor.rs  redis_streams.rs  retry.rs  state.rs
gateway/: Cargo.toml
gateway/src/: circuit_breaker.rs  main.rs  middleware.rs  router.rs  service_client.rs
gateway/src/handlers/: federation.rs
gateway/src/routes/: account.rs  account_deletion.rs  auth.rs  capabilities.rs  csrf.rs  devices.rs  federation.rs  health.rs  invites.rs  keys.rs  media.rs  messages.rs  middleware.rs  mod.rs  notifications.rs
invite-service/: Cargo.toml
invite-service/src/: core.rs  main.rs
key-service/: Cargo.toml
key-service/src/: core.rs  kt.rs  main.rs
media-service/: Cargo.toml
media-service/src/: config.rs  core.rs  handlers.rs  lib.rs  main.rs  main_rest.rs.bak  test_serde.rs  types.rs  utils.rs
messaging/: Cargo.toml
messaging-service/: Cargo.toml
messaging-service/src/: context.rs  core.rs  envelope.rs  grpc.rs  handlers.rs  main.rs  media_routes.rs  receipts.rs  stream.rs  trust.rs
messaging/src/: lib.rs  routes.rs  service.rs
messaging/src/messaging_service/: handlers.rs  mod.rs
mls-service/: Cargo.toml
mls-service/src/: cleanup.rs  helpers.rs  main.rs  metrics.rs  service.rs
mls-service/src/handlers/: admin.rs  group_lifecycle.rs  key_packages.rs  membership.rs  messaging.rs  mls_sync.rs  mod.rs  topics.rs
mls-service/src/tests/: admin.rs  group_lifecycle.rs  key_packages.rs  membership.rs  messaging.rs  mod.rs  (+4 more)
sentinel-service/: Cargo.toml
sentinel-service/src/: core.rs  main.rs
shared/: Cargo.toml  build.rs
shared/migrations/: 001_init.sql  003_user_key_bundle.sql  005_crypto_agility.sql  007_delivery_pending.sql  008_phase5_crypto_foundation.sql  010_devices_passwordless_auth.sql  011_redesign_users_passwordless.sql  012_add_crypto_fields_to_devices.sql  013_privacy_simplify_devices.sql  014_remove_suite_id.sql  015_dynamic_invites.sql  015_dynamic_invites_v2.sql  016_add_signed_prekey_signature.sql  017_fix_delivery_pending_timestamps.sql  018_fix_delivery_pending_timezone.sql  019_user_blocks.sql  020_drop_users_legacy.sql  021_media_files.sql  022_one_time_prekeys.sql  023_mls_groups.sql  024_sentinel.sql  025_device_tokens_v2.sql  026_signed_prekey_id.sql  027_otpk_soft_delete.sql  028_pqc_kyber_keys.sql  029_drop_pq_prekeys.sql  030_restore_key_updated_at.sql  031_spk_timestamps.sql  032_disputes.sql  033_user_blocks_index.sql  034_username_hash.sql  035_drop_plaintext_username.sql  036_voip_tokens.sql  037_contact_links.sql  038_user_discoverable.sql  039_drop_key_bundles.sql  040_call_records.sql  040_drop_dead_tables.sql  040_group_topics_invite_links.sql  041_mls_cleanup_function.sql  (+10 more)
shared/proto/: buf.yaml
shared/src/: construct_server.rs  lib.rs
shared/tests/: delivery_ack_test.rs  delivery_worker_test.rs  e2e_crypto_test.rs  federation_compatibility_test.rs  message_ordering_test.rs  microservices_smoke_test.rs  next_since_bug_test.rs  next_since_contract_test.rs  notification_service_test.rs  protocol_compliance_test.rs  public_key_endpoint_test.rs  queue_test.rs  rest_api_account_test.rs  rest_api_auth_test.rs  rest_api_auth_test.rs.bak  rest_api_health_test.rs  rest_api_keys_test.rs  rest_api_messages_test.rs  rest_api_messages_test.rs.bak  rest_api_middleware_test.rs  rest_api_test.rs  test_utils.rs
signaling-service/: Cargo.toml
signaling-service/src/: forwarded.rs  main.rs  rate_limiter.rs  registry.rs  routing.rs  service.rs  time.rs  turn.rs
(+508 files in other folders)
