[package]
name = "construct-server"
version = "0.1.1"
edition = "2024"

[dependencies]
# Async runtime
tokio = { version = "1.40", features = ["full"] }
tokio-tungstenite = "0.24"
futures-util = "0.3"

# HTTP server для health checks и metrics
hyper = { version = "1.5", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
bytes = "1.8"

# Database
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "tls-rustls-ring-native-roots",
    "postgres",
    "macros",
    "chrono",
    "uuid",
    "migrate",
] }

# Redis (updated for TLS support)
redis = { version = "1.0", features = ["tokio-comp", "connection-manager", "tokio-native-tls-comp"] }
tokio-native-tls = "0.3.1"
native-tls = "0.2.14"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rmp-serde = "1.3"  # MessagePack для WebSocket

# Cryptography
chacha20poly1305 = "0.10"
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
rand = "0.8"
sha2 = "0.10"
hkdf = "0.12"
zeroize = "1.8"
subtle = "2.6"

# Authentication & Security
bcrypt = "0.16"
jsonwebtoken = "9.3"
base64 = "0.22"

# Configuration & Environment
dotenvy = "0.15"
anyhow = "1.0"

# Logging & Monitoring
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Metrics (Prometheus)
once_cell = "1.21.3"
prometheus = { version = "0.13", features = ["process"] }

# UUID
uuid = { version = "1.11", features = ["v4", "serde"] }

# Date & Time
chrono = { version = "0.4", features = ["serde"] }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = true
