[package]
name = "construct-server"
version = "0.4.6"
edition = "2024"

[lib]
name = "construct_server"
path = "src/lib.rs"

[[bin]]
name = "construct-server"
path = "src/main.rs"

[[bin]]
name = "delivery-worker"
path = "src/bin/delivery_worker.rs"

[[bin]]
name = "message-gateway"
path = "src/bin/message_gateway.rs"

[[bin]]
name = "media-server"
path = "src/bin/media_server.rs"

[dependencies]
# Async runtime
tokio = { version = "1.40", features = ["full"] }
tokio-tungstenite = "0.24"
futures-util = "0.3"
async-trait = "0.1"

# HTTP server для health checks и metrics
hyper = { version = "1.5", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
bytes = "1.8"

# HTTP framework для media-server
axum = { version = "0.7", features = ["multipart"] }

# HTTP client (federation)
reqwest = { version = "0.12", features = ["json"] }

# Database
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "tls-rustls-ring-native-roots",
    "postgres",
    "macros",
    "chrono",
    "uuid",
    "migrate",
] }

# Redis (updated for TLS support)
redis = { version = "1.0", features = ["tokio-comp", "connection-manager", "tokio-native-tls-comp"] }
tokio-native-tls = "0.3.1"
native-tls = "0.2.14"

# Kafka (message broker for reliable delivery)
rdkafka = { version = "0.36", features = ["cmake-build", "ssl", "sasl"] }

# gRPC (message-gateway communication)
tonic = "0.12"
prost = "0.13"

# APNs (Apple Push Notification service)
a2 = "0.10"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_bytes = "0.11"  # For efficient binary serialization in MessagePack
rmp-serde = "1.3"  # MessagePack для WebSocket

# Cryptography
chacha20poly1305 = "0.10"
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
rand = "0.8"
sha2 = "0.10"
hkdf = "0.12"
hmac = "0.12"
zeroize = "1.8"
subtle = "2.6"
hex = "0.4"

# Post-Quantum Cryptography (FIPS 203/204)
# TODO: Choose and integrate PQ library (saorsa-pqc, ml-kem/ml-dsa, or liboqs-rust)
# Note: This is optional - enable with feature flag for production deployment
# When ready, uncomment and specify the library:
# saorsa-pqc = { version = "0.3", optional = true, default-features = false }
# OR
# ml-kem = { version = "0.1", optional = true }
# ml-dsa = { version = "0.1", optional = true }

# Authentication & Security
bcrypt = "0.16"
jsonwebtoken = "9.3"
base64 = "0.22"

# Configuration & Environment
dotenvy = "0.15"
anyhow = "1.0"

# Logging & Monitoring
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Metrics (Prometheus)
once_cell = "1.21.3"
prometheus = { version = "0.13", features = ["process"] }

# UUID
uuid = { version = "1.11", features = ["v4", "serde"] }

# Date & Time
chrono = { version = "0.4", features = ["serde"] }

[build-dependencies]
tonic-build = "0.12"

[features]
default = []
# post-quantum feature is defined but disabled (no dependency yet)
# When saorsa-pqc dependency is added, uncomment: post-quantum = ["saorsa-pqc"]
post-quantum = []

[dev-dependencies]
anyhow = "1.0"
url = "2.5"
serial_test = "3.1.1"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = true
