[workspace]
resolver = "2"

members = [
    "shared",
    "auth-service",
    "messaging-service",
    "user-service",
    "notification-service",
    "gateway",
    "media-service",
    "delivery-worker",
]

# Единая версия для всех пакетов
[workspace.package]
version = "0.5.11"
edition = "2024"
authors = ["Construct Team"]
repository = "https://github.com/maximeliseyev/construct-server"
license = "MIT"

[workspace.dependencies]
# Common dependencies for all services
tokio = { version = "1.40", features = ["full"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
uuid = { version = "1.11", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
async-trait = "0.1"

# Database
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "tls-rustls-ring-native-roots", 
    "postgres",
    "macros",
    "chrono",
    "uuid",
    "migrate",
] }

# Redis
redis = { version = "1.0", features = ["tokio-comp", "connection-manager", "tokio-native-tls-comp"] }

# HTTP
axum = { version = "0.7", features = ["multipart"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors"] }
reqwest = { version = "0.12", features = ["json"] }

# Auth
jsonwebtoken = "9.3"
bcrypt = "0.16"
base64 = "0.22"

# Crypto
hex = "0.4"
zeroize = "1.8"

# Metrics
prometheus = { version = "0.14", features = ["process"] }
