[package]
name = "auth-service"
version.workspace = true
edition.workspace = true

[dependencies]
construct-config = { path = "../crates/construct-config" }
construct-server-shared = { path = "../shared" }

# Workspace deps
tokio = {workspace = true}
anyhow = {workspace = true}
serde = {workspace = true}
serde_json = {workspace = true}
tracing = {workspace = true}
tracing-subscriber = {workspace = true}
dotenvy = {workspace = true}
uuid = {workspace = true}
chrono = {workspace = true}
thiserror = {workspace = true}
async-trait = {workspace = true}
sqlx = {workspace = true}
redis = {workspace = true}
axum = {workspace = true}
tower = {workspace = true}
tower-http = {workspace = true}
reqwest = {workspace = true}
jsonwebtoken = {workspace = true}
bcrypt = {workspace = true}
base64 = {workspace = true}
hex = {workspace = true}
zeroize = {workspace = true}
prometheus = {workspace = true}
tonic = "0.14.2"
prost = "0.14.3"

# Auth specific
rand = "0.8"
hkdf = "0.12"
hmac = "0.12"
sha2 = "0.10"
chacha20poly1305 = "0.10"
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
subtle = "2.6"
