[package]
name = "key-service"
version = "0.1.0"
edition = "2021"
description = "E2EE Key Management Service for Construct Messenger"
license = "MIT"

[dependencies]
# Core runtime
tokio = { version = "1", features = ["full"] }
anyhow = "1"
thiserror = "1"

# gRPC / Tonic
tonic = "0.14"
prost = "0.13"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls-ring-native-roots", "postgres", "uuid", "chrono"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Crypto
sha2 = "0.10"
hex = "0.4"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP + Tracing
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Shared dependencies
construct-server-shared = { path = "../shared" }
construct-config = { path = "../crates/construct-config" }

[[bin]]
name = "key-service"
path = "src/main.rs"
