[package]
name = "media-service"
version.workspace = true
edition.workspace = true

[dependencies]
# Workspace deps
tokio = {workspace = true}
anyhow = {workspace = true}
serde = {workspace = true}
serde_json = {workspace = true}
tracing = {workspace = true}
tracing-subscriber = {workspace = true}
dotenvy = {workspace = true}
uuid = {workspace = true}
chrono = {workspace = true}
axum = {workspace = true}
tower = {workspace = true}
tower-http = {workspace = true}
base64 = {workspace = true}
hex = {workspace = true}

# Media specific
sha2 = "0.10"
hmac = "0.12"
subtle = "2.6"
rand = "0.8"