[package]
name = "messaging-service"
version.workspace = true
edition.workspace = true

[dependencies]
construct-config = { path = "../crates/construct-config" }
construct-server-shared = { path = "../shared" }

# Workspace deps (add as needed)
tokio = {workspace = true}
anyhow = {workspace = true}
serde = {workspace = true}
serde_json = {workspace = true}
tracing = {workspace = true}
tracing-subscriber = {workspace = true}
dotenvy = {workspace = true}
uuid = {workspace = true}
chrono = {workspace = true}
thiserror = {workspace = true}
async-trait = {workspace = true}
sqlx = {workspace = true}
redis = {workspace = true}
axum = {workspace = true}
tower = {workspace = true}
tower-http = {workspace = true}
reqwest = {workspace = true}
jsonwebtoken = {workspace = true}
bcrypt = {workspace = true}
base64 = {workspace = true}
hex = {workspace = true}
zeroize = {workspace = true}
prometheus = {workspace = true}
tonic = "0.14.2"
prost = "0.14.3"
construct-crypto = { path = "../crates/construct-crypto" }
construct-extractors = { path = "../crates/construct-extractors" }
construct-error = { path = "../crates/construct-error" }
construct-types = { path = "../crates/construct-types" }
futures-core = "0.3"
tokio-stream = "0.1"

# Messaging specific
serde_bytes = "0.11"
rmp-serde = "1.3"
hmac = "0.12"
rand = "0.8"
sha2 = "0.10"
