[package]
name = "messaging-service"
version.workspace = true
edition.workspace = true

[dependencies]
construct-config = { path = "../crates/construct-config" }
construct-server-shared = { path = "../shared" }
construct-apns = { path = "../crates/construct-apns" }
construct-auth = { path = "../crates/construct-auth" }
construct-broker = { path = "../crates/construct-broker" }
construct-context = { path = "../crates/construct-context" }
construct-db = { path = "../crates/construct-db" }
construct-federation = { path = "../crates/construct-federation" }
construct-key-management = { path = "../crates/construct-key-management" }
construct-queue = { path = "../crates/construct-queue" }
construct-utils = { path = "../crates/construct-utils" }
construct-crypto = { path = "../crates/construct-crypto" }
construct-extractors = { path = "../crates/construct-extractors" }
construct-error = { path = "../crates/construct-error" }
construct-types = { path = "../crates/construct-types" }

tokio = {workspace = true}
anyhow = {workspace = true}
serde = {workspace = true}
serde_json = {workspace = true}
tracing = {workspace = true}
tracing-subscriber = {workspace = true}
dotenvy = {workspace = true}
uuid = {workspace = true}
chrono = {workspace = true}
thiserror = {workspace = true}
async-trait = {workspace = true}
sqlx = {workspace = true}
redis = {workspace = true}
axum = {workspace = true}
tower = {workspace = true}
tower-http = {workspace = true}
reqwest = {workspace = true}
jsonwebtoken = {workspace = true}
bcrypt = {workspace = true}
base64 = {workspace = true}
hex = {workspace = true}
zeroize = {workspace = true}
prometheus = {workspace = true}
tonic = "0.14.2"
prost = "0.14.3"
futures-core = "0.3"
tokio-stream = "0.1"

# Messaging specific
serde_bytes = "0.11"
rmp-serde = "1.3"
hmac = "0.13"
rand = "0.10"
sha2 = "0.11"

[dev-dependencies]
serial_test = "3"
tokio = { workspace = true }
uuid = { workspace = true }

[features]
integration_tests = []
