[package]
name = "mls-service"
version = "0.1.0"
edition = "2021"
description = "MLS Group Messaging Service for Construct Messenger (RFC 9420)"
license = "MIT"

[dependencies]
# Core runtime
tokio = { version = "1", features = ["full"] }
anyhow = "1"

# gRPC / Tonic
tonic = "0.14"
prost = "0.14"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Health check
axum = "0.8"
serde_json = "1"

# Database
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio-rustls", "uuid", "chrono"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

sha2 = "0.10"
hex = "0.4"

# Crypto — Ed25519 for admin proof verification
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
rand = "0.8"

# Shared
construct-server-shared = { path = "../shared" }
construct-db = { path = "../crates/construct-db" }
construct-config = { path = "../crates/construct-config" }

[[bin]]
name = "mls-service"
path = "src/main.rs"
