[package]
name = "sentinel-service"
version = "0.1.0"
edition = "2021"
description = "SentinelService — privacy-first anti-spam protection for Construct Messenger"
license = "MIT"

[dependencies]
# Core runtime
tokio = { version = "1", features = ["full"] }
anyhow = "1"
thiserror = "1"

# gRPC / Tonic
tonic = "0.14"
prost = "0.13"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls-ring-native-roots", "postgres", "uuid", "chrono"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }

# Redis
redis = { version = "1.0", features = ["tokio-comp", "connection-manager"] }

# Logging + Health
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
axum = "0.7"
serde_json = "1"

# Shared
construct-server-shared = { path = "../shared" }

[[bin]]
name = "sentinel-service"
path = "src/main.rs"
