[package]
name = "construct-server-shared"
version.workspace = true
edition.workspace = true

[dependencies]
# New modular crates (Phase 4)
construct-types = { path = "../crates/construct-types" }
construct-error = { path = "../crates/construct-error", features = ["full"] }
construct-crypto = { path = "../crates/construct-crypto", features = ["full"] }
construct-config = { path = "../crates/construct-config" }

tokio = {workspace = true}
anyhow = {workspace = true}
serde = {workspace = true}
serde_json = {workspace = true}
tracing = {workspace = true}
tracing-subscriber = {workspace = true}
dotenvy = {workspace = true}
uuid = {workspace = true}
chrono = {workspace = true}
thiserror = {workspace = true}
async-trait = {workspace = true}
sqlx = {workspace = true}
redis = {workspace = true}
axum = {workspace = true}
tower = {workspace = true}
tower-http = {workspace = true}
reqwest = {workspace = true}
jsonwebtoken = {workspace = true}
bcrypt = {workspace = true}
base64 = {workspace = true}
hex = {workspace = true}
zeroize = {workspace = true}
prometheus = {workspace = true}

# Additional shared deps
bytes = "1.8"
futures-util = "0.3"
once_cell = "1.21.3"

# Crypto and security
rand = "0.8"
hmac = "0.12"
sha2 = "0.10"
subtle = "2.6"
chacha20poly1305 = "0.10"
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
ed25519-dalek = { version = "2.1", features = ["rand_core"] }

# HTTP and gRPC
hyper = { version = "1.5", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
 tonic = "0.12"
 prost = "0.13"

# Message formats
serde_bytes = "0.11"
rmp-serde = "1.3"

# Kafka
rdkafka = { version = "0.36", features = ["cmake-build", "ssl", "sasl"] }

# APNs
a2 = "0.10"

# Federation and TLS
native-tls = "0.2.14"
tokio-native-tls = "0.3.1"

[dev-dependencies]
serial_test = "3.2"

[build-dependencies]
tonic-build = "0.12"