[package]
name = "signaling-service"
version = "0.1.0"
edition = "2021"
description = "SignalingService — WebRTC call signaling relay for Construct Messenger"
license = "MIT"

[dependencies]
# Core runtime
tokio = { version = "1", features = ["full"] }
anyhow = "1"
thiserror = "2"

# gRPC / Tonic
tonic = "0.14"
prost = "0.14.3"
prost-types = "0.14.3"
tokio-stream = { version = "0.1", features = ["sync"] }

# Redis
redis = { version = "1.0", features = ["tokio-comp", "connection-manager"] }

# Database (block checks)
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "postgres"] }

# Crypto (TURN credentials)
hmac = "0.13"
sha1 = "0.11"
base64 = "0.22"
hex = "0.4"

# Logging + Health
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "registry", "fmt"] }
axum = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
construct-crypto = { path = "../crates/construct-crypto", default-features = false }

# Auth
construct-auth = { path = "../crates/construct-auth" }
construct-config = { path = "../crates/construct-config" }

# Shared
construct-server-shared = { path = "../shared" }
construct-db = { path = "../crates/construct-db" }

[[bin]]
name = "signaling-service"
path = "src/main.rs"
