[package]
name = "construct-apns"
version.workspace = true
edition.workspace = true

[dependencies]
construct-config = { path = "../construct-config" }

anyhow           = "1.0"
serde            = { version = "1.0", features = ["derive"] }
tokio            = { version = "1.40", features = ["full"] }
tracing          = "0.1"

apns-h2          = "0.11.0-alpha.1"
chacha20poly1305 = "0.10"
sha2             = "0.10"
hex              = { workspace = true }
rand             = { version = "0.8", features = ["std"] }
rand_core        = { version = "0.6", features = ["std"] }
serde_json       = "1.0"
thiserror        = { workspace = true }
