[package]
name = "construct-auth-service"
version.workspace = true
edition.workspace = true

[dependencies]
construct-config      = { path = "../construct-config" }
construct-context     = { path = "../construct-context" }
construct-crypto      = { path = "../construct-crypto" }
construct-db          = { path = "../construct-db" }
construct-auth        = { path = "../construct-auth" }
construct-broker      = { path = "../construct-broker" }
construct-federation  = { path = "../construct-federation" }
construct-key-management = { path = "../construct-key-management" }
construct-queue       = { path = "../construct-queue" }
construct-apns        = { path = "../construct-apns" }
construct-error       = { path = "../construct-error", features = ["full"] }
construct-pow         = { path = "../construct-pow" }
construct-utils       = { path = "../construct-utils" }

anyhow  = "1.0"
axum    = { workspace = true }
base64  = "0.22"
chrono  = { version = "0.4", features = ["serde"] }
hex     = "0.4"
serde   = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2    = "0.10"
sqlx    = { version = "0.8", features = ["postgres", "runtime-tokio", "uuid", "chrono"] }
tokio   = { version = "1", features = ["sync"] }
tracing = "0.1"
uuid    = { version = "1.11", features = ["v4"] }

ed25519-dalek = { version = "2.1", features = ["pkcs8"] }
