[package]
name = "construct-auth"
version.workspace = true
edition.workspace = true

[dependencies]
construct-config = { path = "../construct-config" }

anyhow       = "1.0"
serde        = { version = "1.0", features = ["derive"] }
jsonwebtoken = "9.3"
chrono       = { version = "0.4", features = ["serde"] }
uuid         = { version = "1.11", features = ["v4"] }
tracing      = "0.1"
