[package]
name = "construct-config"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core dependencies
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
dotenvy = "0.15"
tracing = "0.1"
uuid = { version = "1.0", features = ["v4"] }
base64 = "0.22"
rand = "0.8"

# Feature dependencies
construct-error = { path = "../construct-error", optional = true }

[features]
default = []
# Enable error types from construct-error
error-types = ["construct-error"]
